--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -4,7 +4,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:windowSoftInputMode="adjustResize"
     tools:context="com.example.chase.mathbash.GameActivity">
 
 
@@ -16,5 +15,7 @@
         android:id="@+id/answer"
         android:hint="@integer/answer"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+
+        />
 </RelativeLayout>
