--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -14,6 +14,8 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="75dp"
-        android:visibility="visible" />
+        android:visibility="visible"
+        android:enabled="true"
+        android:clickable="true" />
 
 </RelativeLayout>
