--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -4,18 +4,55 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.chase.mathbash.GameActivity">
+    android:windowSoftInputMode="stateAlwaysVisible"
+    tools:context="com.example.chase.mathbash.GameActivity"
+   >
 
 
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:inputType="number"
         android:ems="10"
         android:id="@+id/answer"
         android:hint="@integer/answer"
-        android:layout_alignParentBottom="true"
+        android:gravity="center|center_horizontal"
+        android:layout_below="@+id/score"
+        android:imeOptions="actionSend"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="100dp" />
 
-        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/score"
+        android:id="@+id/score"
+        android:gravity="top|right"
+        android:layout_alignTop="@+id/scoreNum"
+        android:layout_toLeftOf="@+id/scoreNum"
+        android:layout_toStartOf="@+id/scoreNum" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@integer/scoreNum"
+        android:id="@+id/scoreNum"
+        android:gravity="top|right"
+        android:layout_marginTop="80dp"
+        android:layout_below="@+id/topMessage"
+        android:layout_toLeftOf="@+id/topMessage"
+        android:layout_toStartOf="@+id/topMessage" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/topMessage"
+        android:id="@+id/topMessage"
+        android:gravity="top"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/answer"
+        android:layout_alignEnd="@+id/answer" />
 </RelativeLayout>
