--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -3,6 +3,7 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:windowSoftInputMode="stateAlwaysVisible"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainMenuActivity">
 
     <Button
@@ -17,5 +18,18 @@
         android:visibility="visible"
         android:enabled="true"
         android:clickable="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/title_activity_game"
+        android:id="@+id/math_title"
+        android:textSize="75dp"
+        android:textAlignment="center"
+        android:textColor="#ff2200cc"
+        android:textStyle="italic"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="false" />
 
 </RelativeLayout>
