--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -15,8 +15,8 @@
         android:inputType="number"
         android:ems="10"
         android:id="@+id/answer"
+        android:text="@integer/answer"
         android:imeOptions="actionDone"
-
         android:layout_marginTop="100dp" />
 
     <TextView
@@ -26,26 +26,10 @@
         android:text="@string/score"
         android:id="@+id/score"
         android:gravity="top|right"
-        android:layout_alignTop="@+id/scoreNum"
-        android:layout_toLeftOf="@+id/scoreNum"
-        android:layout_toStartOf="@+id/scoreNum" />
+         />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@integer/scoreNum"
-        android:id="@+id/scoreNum"
-        android:gravity="top|right"
-        android:layout_marginTop="80dp"
-        />
     
-    <Button
-        android:layout_width=""
-        android:layout_height=""
-        android:layout_below="@+id/answer"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+
 
 
 </RelativeLayout>
