--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -27,6 +27,15 @@
         android:id="@+id/score"
         android:gravity="top|right"
          />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/problem"
+        android:id="@+id/problem"
+        android:layout_marginTop="40dp"
+        android:gravity="top|center"
+        />
 
     
 
