--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -14,8 +14,8 @@
         android:layout_height="wrap_content"
         android:inputType="number"
         android:ems="10"
+        android:hint="@integer/answer"
         android:id="@+id/answer"
-        android:text="@integer/answer"
         android:imeOptions="actionDone"
         android:layout_marginTop="100dp" />
 
