--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -15,7 +15,9 @@
         android:inputType="number"
         android:ems="10"
         android:id="@+id/answer"
-        android:layout_marginTop="100dp" />
+        android:layout_marginTop="100dip"
+        android:gravity="bottom|center"
+        />
 
     <TextView
         android:layout_width="wrap_content"
@@ -31,7 +33,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/problem"
         android:id="@+id/problem"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="40dip"
         android:gravity="top|center"
         />
 
