--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -32,8 +32,52 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/problem"
-        android:id="@+id/problem"
+        android:text="@string/problem1"
+        android:id="@+id/problem1"
+        android:layout_marginTop="40dip"
+        android:gravity="top|center"
+        />
+
+    <TextView
+        android:background="@drawable/gradient_box"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/problem2"
+        android:id="@+id/problem2"
+        android:layout_marginTop="40dip"
+        android:gravity="top|center"
+        />
+
+    <TextView
+        android:background="@drawable/gradient_box"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/problem3"
+        android:id="@+id/problem3"
+        android:layout_marginTop="40dip"
+        android:gravity="top|center"
+        />
+
+    <TextView
+        android:background="@drawable/gradient_box"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/problem4"
+        android:id="@+id/problem4"
+        android:layout_marginTop="40dip"
+        android:gravity="top|center"
+        />
+
+    <TextView
+        android:background="@drawable/gradient_box"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/problem5"
+        android:id="@+id/problem5"
         android:layout_marginTop="40dip"
         android:gravity="top|center"
         />
