--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -34,7 +34,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/problem1"
         android:id="@+id/problem1"
-        android:layout_marginTop="40dip"
+        android:layout_marginTop="4dip"
         android:gravity="top|center"
         />
 
@@ -45,7 +45,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/problem2"
         android:id="@+id/problem2"
-        android:layout_marginTop="40dip"
+        android:layout_marginTop="4dip"
         android:gravity="top|center"
         />
 
@@ -56,7 +56,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/problem3"
         android:id="@+id/problem3"
-        android:layout_marginTop="40dip"
+        android:layout_marginTop="4dip"
         android:gravity="top|center"
         />
 
@@ -67,7 +67,8 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/problem4"
         android:id="@+id/problem4"
-        android:layout_marginTop="40dip"
+        android:visibility="invisible"
+        android:layout_marginTop="4dip"
         android:gravity="top|center"
         />
 
@@ -78,7 +79,8 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/problem5"
         android:id="@+id/problem5"
-        android:layout_marginTop="40dip"
+        android:visibility="invisible"
+        android:layout_marginTop="4dip"
         android:gravity="top|center"
         />
 
