--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -34,6 +34,8 @@
         android:text="@string/problem1"
         android:id="@+id/problem1"
         android:layout_marginTop="4dip"
+        android:layout_marginLeft="4dip"
+        android:layout_marginRight="4dip"
 
         />
 
@@ -45,6 +47,8 @@
         android:text="@string/problem2"
         android:id="@+id/problem2"
         android:layout_marginTop="4dip"
+        android:layout_marginLeft="4dip"
+        android:layout_marginRight="4dip"
 
         />
 
@@ -56,6 +60,8 @@
         android:text="@string/problem3"
         android:id="@+id/problem3"
         android:layout_marginTop="4dip"
+        android:layout_marginLeft="4dip"
+        android:layout_marginRight="4dip"
 
         />
 
@@ -67,6 +73,8 @@
         android:text="@string/problem4"
         android:id="@+id/problem4"
         android:layout_marginTop="4dip"
+        android:layout_marginLeft="4dip"
+        android:layout_marginRight="4dip"
 
         />
 
@@ -77,6 +85,8 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/problem5"
         android:id="@+id/problem5"
+        android:layout_marginLeft="4dip"
+        android:layout_marginRight="4dip"
         android:layout_marginTop="4dip"
         />
 
