--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -16,7 +16,8 @@
         android:ems="10"
         android:id="@+id/answer"
         android:gravity="bottom|center"
-        />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -90,9 +91,14 @@
         android:layout_marginTop="7dip"
         />
 
-
-    
-
+    <ProgressBar
+        style="@android:style/Widget.ProgressBar.Small.Inverse"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/lifeForce"
+        android:layout_below= "@+id/score"
+        android:layout_centerHorizontal="true"
+        />
 
 
 </RelativeLayout>
