progress bar, but weird main menu bug

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -106,6 +106,13 @@
         android:layout_marginTop="7dip"
         />
 
+    <ProgressBar
+        style="@android:style/Widget.ProgressBar.Horizontal"
+        android:layout_width="120dp"
+        android:layout_height="15dp"
+        android:id="@+id/healthBar"
+        android:layout_alignTop="@+id/problem1"
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
