--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -25,7 +25,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/title_activity_game"
         android:id="@+id/math_title"
-        android:setSize="75sp"
+        android:textSize="75sp"
         android:textAlignment="center"
         android:textColor="#458B00"
         android:singleLine="true"
